@@ -1,4 +1,8 @@
-2008-10-16  Iago Toral Quiroga <itoral@igalia.com>
+2008-10-17  Iago Toral Quiroga  <itoral@igalia.com>
+
+	* jhbuild/commands/bot.py: Added --slvfile and --mastercfg options.
+
+2008-10-16  Iago Toral Quiroga  <itoral@igalia.com>
 
 	* jhbuild/commands/bot.py: Added --logfile option.
 
